[package]
name = "nightly-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
tokio = { version = "1.26.0", features = ["sync", "rt", "rt-multi-thread", "macros"]}
tokio-postgres = "0.7.7"
